--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=ofkn9fwP&__jvst=Employee+Referral&__jvsd=soNIKhwp&__jvsc=Twitter&bid=n6KaWLwc'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/waystar/05f25474-2e95-4630-a09b-8652ac6366ca'>Waystar - Graphic Design Intern</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
@@ -99,7 +103,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sephora-sea.workable.com/j/3E575342A6'>Sephora SEA - Jobs: Merchandising (Category) Intern - 6 months - Apply online</a></h5> 
+<h5><a href='https://sephora-sea.workable.com/j/3E575342A6'>Sephora SEA - Jobs: Merchandising (Category) Intern - 6 months - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore Singapore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -111,11 +115,11 @@
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=o4vn9fwP&__jvst=Employee+Referral&__jvsd=sMkFeiwM&__jvsc=Twitter&bid=ntAYVLwc'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qWGaVfwr&k=Job&j=o4vn9fwP&__jvst=Employee+Referral&__jvsd=sMkFeiwM&__jvsc=Twitter&bid=ntAYVLwc'>Selina Careers - Hospitality Operations (Internship Opportunity)</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://huttonconstructioncorp.recruitee.com/o/internshipseasonal-craft-labor'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://huttonconstructioncorp.recruitee.com/o/internshipseasonal-craft-labor'>
       *Internship/Seasonal Craft Labor - Hutton Corporation
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -215,7 +219,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VoyagePriv/743999692301374-country-manager-assistant-summer-paid-internship'>Voyage Priv? Country Manager Assistant Summer Paid Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VoyagePriv/743999692301374-country-manager-assistant-summer-paid-internship'>Voyage Priv? Country Manager Assistant Summer Paid Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -255,7 +259,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bookingkit.join.com/jobs/270974-internship-business-development-m-f-d'>Job @ bookingkit (Berlin): Internship Business Dev... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -279,7 +283,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://luxasia.workable.com/j/B2A2E4A838'>Luxasia - Jobs: E-commerce Internship - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://luxasia.workable.com/j/B2A2E4A838'>Luxasia - Jobs: E-commerce Internship - Apply online</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -287,7 +291,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1762696'>Job Application for Intern Production System, New Factory Planning & Simulation at Lilium</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lilium/jobs/1762696'>Job Application for Intern Production System, New Factory Planning & Simulation at Lilium</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -315,7 +319,7 @@ the?...</p>
 Culture Manager. Documents: .doc, .docx, .pdf, .rtf, .odt, .txt. CV. Other Documents
 .</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12666&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12666&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... Description. Reporting to the Assistant Manager, Administration the incumbent 
 will be providing reception coverage including processing telephone calls,?...</p>
@@ -332,7 +336,7 @@ will be providing reception coverage including processing telephone calls,?...</
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4315485002'>Job Application for Internship in IT Support at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4315485002'>Job Application for Internship in IT Support at Wayfair</a></h5> 
 <p><span class="badge badge-light">Berlin, DE</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -348,7 +352,7 @@ will be providing reception coverage including processing telephone calls,?...</
 <p><span class="badge badge-light">Atlanta Atlanta Atlanta Atlanta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/skupos/ab4a6941-b264-48d4-8a73-a911379e150d'>Skupos - Partner Marketing Intern</a></h5> 
+<h5><a href='https://jobs.lever.co/skupos/ab4a6941-b264-48d4-8a73-a911379e150d'>Skupos - Partner Marketing Intern</a></h5> 
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -459,7 +463,7 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://taxfix.recruitee.com/o/performance-marketing-intern-mfd'>
+<h5><a href='https://taxfix.recruitee.com/o/performance-marketing-intern-mfd'>
       Performance Marketing Intern (m/f/d) - Taxfix
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -470,10 +474,6 @@ Rocket Internet) in Berlin (published: 19.03.2019). Apply now or check the?...</
 <p>Posted on:: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/vimpelcom/b81e42cf-bf89-4828-b553-e716a3714887'>VEON - Internship ES BSD</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/vimpelcom/ba58b802-211a-4c51-b39f-595321562005'>VEON - Intern People and Organization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
